@@ -1,4 +1,6 @@
 HEAD
+	+ Fixed EBox::CloudSync::Slave to sync uid and gid numbers on user update
+	  and added unit tests for it
 	+ Added EBox::Users::Group::setInternal method
 	+ Allow to use lazy flag with EBox::Users::User::setInternal
 	+ Added unit tests for cloud sync code
